<resources>
    <string name="app_name">KitsuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_anime">Search Anime</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="search_users">Search Users</string>
    <string name="search_manga">Search Manga</string>
    <string name="filter_button">filter button</string>
    <string name="categories">Categories</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="kitsu">Kitsu</string>
    <string name="sign_in_tv">Sign in</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_passwors">Enter password</string>
    <string name="success">Successful</string>
    <string name="wrong_username">\"wrong username or password \"</string>
    <string name="this_post_contains_spoilers">This post contains spoilers.</string>
    <string name="smile">( ⊙_⊙ )</string>
    <string name="write_something">Write something....</string>
    <string name="nsfw">NSFW</string>
    <string name="spoiler">Spoiler</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="app_icon">app icon</string>
    <string name="unknown_error">Unknown error</string>
    <string name="enter_text">Enter text</string>
    <string name="start">start</string>

    <string name="on_board_desc_main">On the main screen of the Kitsu app, you can easily find and track your favorite anime and manga. You can also use the search bar to find any anime or manga by title or author.</string>
    <string name="on_board_desc_details">When you select an anime or manga, you are taken to the details page. Here you can see the cover, description, rating, genres, and number of episodes (for anime) or chapters (for manga). You can also find out information about the author and the animation studio that produced the anime.</string>
    <string name="on_board_desc_posts">You can find interesting posts from other Kitsu users on the posts page, which may include reviews of anime and manga, news from the world of anime industry, and anime-related memes and jokes.</string>

    <string name="on_board_title_main">Main Screen</string>
    <string name="on_board_title_details">Details</string>
    <string name="on_board_title_posts">Posts</string>
    <string name="skip">Skip</string>

</resources>